--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       - "5173:5173"
     environment:
       - CHOKIDAR_USEPOLLING=true               # Mac / WSL のファイル監視向け
+      
+      - VITE_API_URL=http://localhost:8000     
     tty: true                                   # npm run dev のカラー出力保持
 
   # ───────── Backend (FastAPI dev) ─────────
@@ -32,6 +34,10 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
+
+    environment:
+     
+      - ADMIN_PASSWORD=1234  # 管理画面で使うパスワードを環境変数に
 
 volumes:
   frontend_node_modules:                       # 名前付き volume を宣言
