--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ tmp/
 .vscode/
 .DS_Store
 
+backend/app/data/student_results.csv
+backend/app/data/teacher_results.csv
+backend/survey_results.csv
